.metadata/.plugins/org.eclipse.cdt.ui/Projec_00_PiscaLED.build.log
17:29:05 **** Incremental Build of configuration Debug for project Projec_00_PiscaLED ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F072xB -c -I../Core/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc -I../Drivers/STM32F0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F0xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/rubens.araujo/STM32CubeIDE/workspace_1.10.1/Projec_00_PiscaLED/CMSIS/Include" -I"C:/Users/rubens.araujo/STM32CubeIDE/workspace_1.10.1/Projec_00_PiscaLED/CMSIS/Device/ST/STM32F0xx/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:6:6: warning: return type of 'main' is not 'int' [-Wmain]
    6 | void main(){
      |      ^~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:10:10: error: invalid type argument of '->' (have 'unsigned int')
   10 |  GPIOAEN -> MODER |= (1U<<26);
      |          ^~
../Core/Src/main.c:11:10: error: invalid type argument of '->' (have 'unsigned int')
   11 |  GPIOAEN -> MODER &~~ (1U<<27);
      |          ^~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

17:29:06 Build Failed. 3 errors, 1 warnings. (took 1s.59ms)

